Make project fully functional
- Fix deprecated Java URL constructor using URI
- Add environment variable support for GEMINI_API_KEY
- Improve error messages with setup instructions
- Add comprehensive README with setup and usage docs
- Create startup scripts for Windows (.bat) and Linux/Mac (.sh)
- Test both frontend and backend compilation/startup
- Add troubleshooting and deployment guidance